subPages/viewerStyle.css
html, body {
    height: calc(100% - 60.5px);
    background-color: #2d4936;
}


h1 {
    font-family: Arial, sans-serif;
    text-align: center;
    height: 37.5px;
    margin-left: 30px ;
    font: bold;
    color: white;
} 

@media only screen and (max-width: 530px) {
    h1 {
      height: 67.5px;
    }
}
  

iframe {
    display: block;
    border-radius: 10px;
}
img {
    max-width: 65px;
    margin-right: -20px;
    /* margin-left: 40px; */
    border-radius: 10px;
}
#top {
    height: 105px;
    display: flex;
    align-items: center;
    gap: 10px;
    justify-content:center;
    
}

.close-button {
    position: absolute;
    top: 10px; /* Adjust the position as needed */
    left: 10px; /* Adjust the position as needed */
    font-size: 75px;
    margin-left: 10px;
    cursor: pointer;
    color: white;
    transition: color 0.3s;
}

.close-button:hover {
    color: rgb(138, 138, 138);
    transition: color 0.3s;
}

